IKASAN-2731 ongoing library security updates
# Conflicts:
#	ikasaneip/pom.xml
#	ikasaneip/security/rest/pom.xml